# hjkl1-rustful

./: Cargo.toml
migrations/: 20240910125651_create_categories_table.down.sql  20240910125651_create_categories_table.up.sql  20240910125702_create_posts_table.down.sql  20240910125702_create_posts_table.up.sql  20240911020858_add_category_id_to_posts_table.down.sql  20240911020858_add_category_id_to_posts_table.up.sql  20240913023636_add_num_views_to_posts_table.down.sql  20240913023636_add_num_views_to_posts_table.up.sql  20240913023643_add_num_comments_to_posts_table.down.sql  20240913023643_add_num_comments_to_posts_table.up.sql  20240913023708_add_author_id_to_posts_table.down.sql  20240913023708_add_author_id_to_posts_table.up.sql
src/: app_state.rs  lib.rs  main.rs
src/handler/: health.rs  mod.rs
src/handler/categories/: create.rs  delete.rs  get.rs  list.rs  mod.rs  soft_delete.rs  tree.rs  update.rs
src/handler/posts/: create.rs  delete.rs  get.rs  list.rs  markdown.rs  mod.rs  recover.rs  soft_delete.rs  update.rs
src/layer/: cors.rs
src/utils/: pagination.rs
