[package]
name = "hjkl1-rsful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio-native-tls", "mysql", "chrono"]
